--- a/index.Rmd
+++ b/index.Rmd
@@ -3,23 +3,20 @@ title: 'SQL'
 output: html_document
 ---
 
-# This is a first-level header
-## This is a second-level header
-### This is a third-level header
+## Filtering Rows and Columns
 
-For a paragraph, just type normally.
+With SQL, you can filter columns with SELECT and rows with WHERE.  Let's look at an example using THE lahman baseball database.  First, we need to load some packages.
 
-* item 1
-* item 2
-* item 3
-* item 4
+```{r warning=FALSE, message=FALSE}
+library(Lahman)
+library(sqldf)
+```
 
-column 1 | column 2
----|---
-Liverpool | PL
-LAFC | MLS
-Roma | Serie A
-Dortmund | Bundesliga
+Suppose we want to see the homerun totals for the 1927 Yankees.  We could write the following:
 
-<img src="bigfishofdatascience.jpg" width="300" />
+```{r}
+query<-"SELECT playerID,yearID,TEAMid,HR FROM Batting
+WHERE teamID='NYA' and yearID=1927"
+sqldf(query)
+```
 
