--- a/index.Rmd
+++ b/index.Rmd
@@ -19,4 +19,44 @@ query<-"SELECT playerID,yearID,TEAMid,HR FROM Batting
 WHERE teamID='NYA' and yearID=1927"
 sqldf(query)
 ```
+***
 
+Here are some more examples from class on 9/7/17:
+
+```{r}
+query<-"SELECT playerID,teamID,yearID,HR FROM Batting 
+WHERE teamID='NYA' and HR>=40"
+
+sqldf(query)
+```
+***
+```{r}
+query<-"SELECT playerID,yearID,HR,SO FROM Batting
+WHERE HR>40 and SO<60"
+
+sqldf(query)
+```
+***
+```{r}
+query<-"SELECT playerID,teamID,yearID,HR FROM Batting
+WHERE teamID='PHI' and HR>30 and yearID<=1979 and yearID>=1970"
+
+sqldf(query)
+```
+***
+```{r}
+query<-"SELECT playerID,yearID,teamID,HR FROM Batting
+WHERE HR>50
+ORDER BY HR DESC"
+
+sqldf(query)
+```
+***
+```{r}
+query<-"SELECT playerID,yearID,teamID,SO,AB FROM Batting
+WHERE SO<10 and AB>=400
+ORDER BY SO ASC"
+
+sqldf(query)
+```
+***
