--- a/index.Rmd
+++ b/index.Rmd
@@ -86,3 +86,15 @@ WHERE Batting.playerID='ruthba01'"
 sqldf(query)
 ```
 ***
+```{r}
+query<-"SELECT nameFirst,nameLast,avg(salary)
+FROM Salaries INNER JOIN Master
+ON Salaries.playerID=Master.playerID
+WHERE nameFirst='Bob'
+GROUP BY Salaries.playerID
+HAVING avg(salary)>1000000
+ORDER BY avg(salary) DESC"
+
+sqldf(query)
+```
+***
